--- a/style.css
+++ b/style.css
@@ -19,12 +19,14 @@ html {
 }
 
 body {
-    background: #f5f5f546;
-    /* fallback for old browsers */
+    /* background: #f5f5f546;
+
     background: -webkit-linear-gradient(to right, #190A05, #870000);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #190A05, #870000);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+    background: linear-gradient(to right, #190A05, #870000); */
+
+
+    background-image: linear-gradient(to right top, #cd1c1c, #b41e2d, #972437, #782a3a, #592c38, #5a2c39, #5a2d39, #5b2d3a, #7c2b3f, #9e263f, #be1e39, #dc152e);
 }
 
 header {
@@ -306,8 +308,5 @@ main .box_producto p {
     .btn_producto:hover {
         border: 2px solid var(--txt);
     }
-
-
-
 
 }
